src/pages/Landing/Landing.css
/* Landing Section 1 Styles */
.landing {
  height: 100vh;
 width: 100vw;
  margin: 0;
  margin-top: -10vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  border-bottom-left-radius: 5vh;
  border-bottom-right-radius: 5vh;
  align-items: center;
  position: relative; /* Add position relative to the parent container */
  background-image: url(https://live.staticflickr.com/65535/53096318282_6b017fa4e9_h.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  z-index: 12;

}
.landingContainer {
  max-width: 100vw;
}
.landingsection2container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
  width: 100vw;
height: 100vh;
margin-top: 10vh;

  z-index: 0;
}

/* .landingsection2container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100vw;
  margin: 0;

  z-index: 0;
} */

/* Landing Section 2 Styles */
.landingSubOuter {
  width: 100vw;
  height: 130vh;
  margin: 0;
  margin-top: -20vh;
  background-color: var( --accent-pink);
  border-bottom-left-radius:5vh;
  border-bottom-right-radius: 5vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 7;
}

/* Landing Section 3 Styles */
.landingSubOuter2 {
  width: 100vw;
  height: 130vh;
  margin-top: -20vh;
  background-color: var(--light-blue);
  border-bottom-left-radius: 5vh;
  border-bottom-right-radius:5vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: -1;
}

/* Landing Section 3 Styles */
.landingSubOuter3 {
  width: 100vw;
  height: 130vh;
  margin-top: -40vh;
  background-color: var(--background-offwhite);
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: -4;
}

/* Landing Section 4 Styles */
.landingSection4 {
  width: 100vw;
  height: 100vh;
  margin-top: -20vh;
  background-color: var(--main-blue);
  border-top-left-radius: 5vh;
  border-top-right-radius: 5vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: -1;
}

.landingSubOuter4 {
  width: 100vw;
  height: 100vh;
  margin-top: 0vh;
  bottom: 0;
  border-top-left-radius: 5vh;
  border-top-right-radius: 5vh;
  background-color: var(--main-blue);
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 0;
}

/* Common Styles */
.landingSection,
.landingSection2,
.landingSection3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.landingSubContent,
.landingSub4Info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  margin-top: 10vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 0;
}

/* Landing Section 1 Image Styles */
.landingImage img {
  width: 100%;
  height: 100%;
  object-fit: cover; /* Ensure the image covers the container */
}

/* Landing Section 2 Image Styles */
.containerImg {
border-radius:30px ;
margin: 0;
}

/* Food Types Styles */
.foodTypes {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 45vh;
}

/* Food Type Container Styles */
.foodTypeContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100vw;
  overflow-x: auto;
  margin-right: 10px; /* Adjust the margin as needed */
  /* You can add more styling as needed for individual foodType divs */
}

/* Food Type Styles */
.foodType {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-width: 700px;
  margin: 2rem;
  height: 45vh;
  border-radius: 3.4rem;
  background-color: var(--header-main);
}

/* Landing Info Styles */
.landingInfo {
  position: absolute; /* Use absolute positioning to overlay the image */
  top: 50%;
  left: 70%;
  transform: translate(-50%, -50%); /* Center the landing info container */
  padding: 20px;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-end;
}

.landingsubs {
  font-size: 2rem;
  margin-bottom: 10px;
}

/* Terms and Conditions Styles */
.tcs {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: var(--background-offwhite);
  width: 30vw;
}

.tcs label {
  width: 100vw;
}

.tcsinput  {
  width: 6vw;
  margin-right: 1rem;
  border-radius: 60px;
}
.tcsinput:checked {
accent-color: var(--background-offwhite);
color: #ffffff;
}

.tcslink a {
  text-decoration: underline;
  color: var(--background-offwhite);
  font-weight: 600;
}

/* Landing Section 4 Content Styles */
.landingSub4Title {
  font-size: 4rem;
  margin: 0;
  margin-top: 30vh;
  margin-bottom: 1rem;
  color: var(--background-offwhite);
}

.landingSub4Para {
  font-size: 1.5rem;
  font-weight: 300;
  width: 45vw;
  margin-bottom: 1rem;
  color: var(--background-offwhite);
  text-align: center;
}

/* Input Container Styles */
.input-container {
  display: flex;
  align-items: center;
  height: auto;
}

.input-container input[type="text"] {
  flex: 1;
  padding: 10px;
  width: 35vw;
  height: 7.5vh;
  border-radius: 17.4rem;
  font-size: 1.4rem;
  margin-top: 1rem;
  outline: none;
}

/* Landing Section 4 Image Styles */
.landingSub4Img {
  position: absolute;
  width: 20vw;
 top: 0vh;
 right: 0vw;
 
}

/* Input Button Styles */
.input-container button {
  background-color: var(--main-blue); /* Change this to your desired button style */
  color: #fff;
  padding: 10px;
  margin-left: -12.36vw;
  margin-top: 0.6vh;
  font-size: 1.1rem;
  font-weight: 600;
  width: 12vw;
  height: 8.2vh;
  border: none;
  cursor: pointer;
  border-radius: 17.4rem;
  border: 0;
}

.input-container button:hover {
  background-color: var(--background-offwhite);
  color: var(--main-blue);
  border: 4px solid var(--main-blue);
  cursor: pointer;
}
/* ... */

